[gd_scene load_steps=5 format=2]

[ext_resource path="res://widgets/GameUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://widgets/WallpaperSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/Game.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.121569, 0.137255, 0.2, 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 8 )

[node name="Sprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 200, 732.797 )
scale = Vector2( 1, 1465.59 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 80, 170 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 160, 170 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 240, 170 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 320, 170 )

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( 80, 370 )

[node name="Position2D6" type="Position2D" parent="."]
position = Vector2( 160, 370 )

[node name="Position2D7" type="Position2D" parent="."]
position = Vector2( 240, 370 )

[node name="Position2D8" type="Position2D" parent="."]
position = Vector2( 320, 370 )

[node name="Position2D9" type="Position2D" parent="."]
position = Vector2( 80, 570 )

[node name="Position2D10" type="Position2D" parent="."]
position = Vector2( 160, 570 )

[node name="Position2D11" type="Position2D" parent="."]
position = Vector2( 240, 570 )

[node name="Position2D12" type="Position2D" parent="."]
position = Vector2( 320, 570 )

[node name="Tubes" type="Node2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="LevelCreator" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/LevelCreator"]
margin_right = 400.0
margin_bottom = 24.0
alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/LevelCreator/HBoxContainer"]
margin_left = 70.0
margin_top = 5.0
margin_right = 108.0
margin_bottom = 19.0
text = "Tubes"

[node name="TubesInput" type="LineEdit" parent="CanvasLayer/LevelCreator/HBoxContainer"]
margin_left = 112.0
margin_right = 170.0
margin_bottom = 24.0

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/LevelCreator/HBoxContainer"]
margin_left = 174.0
margin_right = 224.0
margin_bottom = 24.0
custom_constants/separation = 50

[node name="Label3" type="Label" parent="CanvasLayer/LevelCreator/HBoxContainer"]
margin_left = 228.0
margin_top = 5.0
margin_right = 268.0
margin_bottom = 19.0
text = "Empty"

[node name="EmptyInput" type="LineEdit" parent="CanvasLayer/LevelCreator/HBoxContainer"]
margin_left = 272.0
margin_right = 330.0
margin_bottom = 24.0

[node name="Recreate" type="Button" parent="CanvasLayer/LevelCreator"]
margin_top = 28.0
margin_right = 400.0
margin_bottom = 48.0
text = "Recreate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reload" type="Button" parent="CanvasLayer/LevelCreator"]
margin_top = 52.0
margin_right = 400.0
margin_bottom = 72.0
text = "Clutter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/LevelCreator"]
margin_top = 76.0
margin_right = 400.0
margin_bottom = 92.0
custom_constants/separation = 16

[node name="Save" type="Button" parent="CanvasLayer/LevelCreator"]
margin_top = 96.0
margin_right = 400.0
margin_bottom = 116.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Panel" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control/CenterContainer"]
margin_left = 50.0
margin_top = 325.0
margin_right = 350.0
margin_bottom = 375.0
rect_min_size = Vector2( 300, 50 )
value = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="ui_restart" from="CanvasLayer/GameUI" to="." method="_on_GameUI_ui_restart"]
[connection signal="text_changed" from="CanvasLayer/LevelCreator/HBoxContainer/TubesInput" to="." method="_on_TubesInput_text_changed"]
[connection signal="text_changed" from="CanvasLayer/LevelCreator/HBoxContainer/EmptyInput" to="." method="_on_EmptyInput_text_changed"]
[connection signal="pressed" from="CanvasLayer/LevelCreator/Recreate" to="." method="_on_Recreate_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelCreator/Reload" to="." method="_on_Reload_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelCreator/Save" to="." method="_on_save_pressed"]
